--- a/debtman/templates/home.html
+++ b/debtman/templates/home.html
@@ -1,15 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-8 col-xs-offset-2">         
-        <div class="jumbotron">
-  	        <h1>Hello, world!</h1>
-                <p>...</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-             </div>
-         </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12">         
+      <div class="jumbotron">
+        <h1>Hello, world!</h1>
+        <p>...</p>
+        <p><a class="btn btn-primary btn-lg" href="{{ url_for}}" role="button">Learn more</a></p>
       </div>
+    </div>
   </div>
+  <div class="row">
+    <div class="col-xs-4">
+       Point 1
+    </div>
+    <div class="col-xs-4">
+       Point 2
+    </div>
+    <div class="col-xs-4">
+       Point 3
+    </div>
+  </div>
+</div>
 {% endblock %}
