Saving current state of projec

--- a/debtman/templates/debtstart.html
+++ b/debtman/templates/debtstart.html
@@ -1,4 +1,8 @@
 <!--Start page to entering debt information into web app-->
 {% extends "base.html" %}
 
+{% block content %}
+<h1>Suprise</h1>
+{% endblock %}
+ 
 
