--- a/debtman/templates/base.html
+++ b/debtman/templates/base.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-default navbar-fixed-bottom">
         <div class="container-fluid">
             <p class="navbar-text">
-                Developed at Steelhacks 2018 by Alex Zharichenko, Hayden Stec, and Krutarth Patel  |  The content on this site is for informational purposes.
+                Developed at Steelhacks 2018 by Alex Zharichenko, Hayden Stec, and Krutarth Patel  |  Disclaimer: The content of this site is for informational purposes.
             </p>
         </div>
     </nav>
