--- a/debtman/templates/home.html
+++ b/debtman/templates/home.html
@@ -7,7 +7,7 @@
       <div class="jumbotron">
         <h1>Hello, world!</h1>
         <p>...</p>
-        <p><a class="btn btn-primary btn-lg" href="{{ url_for}}" role="button">Learn more</a></p>
+        <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_basic_data") }}" role="button">Learn more</a></p>
       </div>
     </div>
   </div>
