--- a/debtman/templates/base.html
+++ b/debtman/templates/base.html
@@ -14,8 +14,8 @@
             <div class="navbar-header">
 
             </div>
-            <a class="navbar-brand" href="/">Debt Manger</a>
-            <p class="navbar-text">Because everyone is in debt :(</p>
+            <a class="navbar-brand" href="/">MTWDues</a>
+            <p class="navbar-text">We are here to help you with your mountain of dues to pay</p>
         </div>
     </div>
 {% endblock %}
