--- a/debtman/templates/base.html
+++ b/debtman/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Debt Manager{% endblock %}
+{% block title %}MTW Dues{% endblock %}
 
 {% block styles %}
    {{ super() }}
