--- a/debtman/templates/debt.html
+++ b/debtman/templates/debt.html
@@ -1,3 +1,6 @@
 <!--Main page for viewing all accounts with debt and entering new accounts-->
 {% extends "base.html"%}
 
+{% block content %}
+<h1>More content</h1>
+{% endblock %}
