--- a/debtman/templates/home.html
+++ b/debtman/templates/home.html
@@ -13,13 +13,16 @@
   </div>
   <div class="row">
     <div class="col-xs-4">
-       Point 1
+       <h1>Point number 1</h1>
+       <p></p>
     </div>
     <div class="col-xs-4">
-       Point 2
+       <h1>Point number 2</h1>
+       <p></p>
     </div>
     <div class="col-xs-4">
-       Point 3
+       <h1>Point number 3</h1>
+       <p></p>
     </div>
   </div>
 </div>
