--- a/debtman/templates/home.html
+++ b/debtman/templates/home.html
@@ -13,16 +13,22 @@
   </div>
   <div class="row">
     <div class="col-xs-4">
-       <h1>Point number 1</h1>
-       <p></p>
+       <h1>Step 1: Collect Information</h1>
+       <p>Our program will take basic information about each of your debt commitments.
+         This information will include data such as interest rate, balance, name of the loan, etc. 
+         These will then be plugged into our calculator for recommended payments and actions.</p>
     </div>
     <div class="col-xs-4">
-       <h1>Point number 2</h1>
-       <p></p>
+       <h1>Step 2: Calculate</h1>
+       <p>With the given information we will use our personal algorithms and formulas to calculate
+        the most efficient way to make payments on your debt.</p>
     </div>
     <div class="col-xs-4">
-       <h1>Point number 3</h1>
-       <p></p>
+       <h1>Step 3: Personal Recommendation</h1>
+       <p>From the calculations we have done, we will provide you with a personalized payment plan and reccomendations
+      to follow. Using this will pay back your debt in the most efficient way. Along with this you can follow tips to
+      improve your situation. Along with this, you can follow tips to improve your financial state. **We still reccomend
+      going to financial advisors for more help**</p>
     </div>
   </div>
 </div>
