--- a/debtman/templates/home.html
+++ b/debtman/templates/home.html
@@ -5,8 +5,8 @@
   <div class="row">
     <div class="col-xs-12">         
       <div class="jumbotron">
-        <h1>Hello, world!</h1>
-        <p>...</p>
+        <h1>Mountain of Dues!</h1>
+        <p>An informational calculator to efficiently pay debt</p>
         <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_basic_data") }}" role="button">Learn more</a></p>
       </div>
     </div>
