--- a/debtman/templates/home.html
+++ b/debtman/templates/home.html
@@ -7,7 +7,7 @@
       <div class="jumbotron">
         <h1>Mountain of Dues!</h1>
         <p>An informational calculator to efficiently pay debt</p>
-        <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_basic_data") }}" role="button">Learn more</a></p>
+        <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_basic_data") }}" role="button">Begin Process</a></p>
       </div>
     </div>
   </div>
