--- a/debtman/templates/base.html
+++ b/debtman/templates/base.html
@@ -14,7 +14,7 @@
             <div class="navbar-header">
 
             </div>
-            <a class="navbar-brand" href="/">MTWDues</a>
+            <a class="navbar-brand" href="/">MTNDues</a>
             <p class="navbar-text">We are here to help you with your mountain of dues to pay</p>
         </div>
     </div>
