--- a/debtman/templates/base.html
+++ b/debtman/templates/base.html
@@ -3,31 +3,32 @@
 {% block title %}MTN Dues{% endblock %}
 
 {% block styles %}
-   {{ super() }}
-   <link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='style.css') }}">
-   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+{{ super() }}
+<link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='custom.min.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='style.css') }}">
 {% endblock %}
 
 {% block navbar %}
-    <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
+<div class="navbar navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
 
-            </div>
-            <a class="navbar-brand" href="/">MTNDues</a>
-            <p class="navbar-text">We are here to help you with your mountain of dues to pay</p>
         </div>
+        <a class="navbar-brand" href="/">MTNDues</a>
+        <p class="navbar-text">We are here to help you with your mountain of dues to pay</p>
     </div>
+</div>
 {% endblock %}
 
 
 {% block body %}
-    {{ super() }}
-    <nav class="navbar navbar-default navbar-fixed-bottom">
-        <div class="container-fluid">
-            <p class="navbar-text">
-                Developed at Steelhacks 2018 by Alex Zharichenko, Hayden Stec, and Krutarth Patel  |  Disclaimer: The content of this site is for informational purposes.
-            </p>
-        </div>
-    </nav>
+{{ super() }}
+<nav class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container-fluid">
+        <p class="navbar-text">
+            Developed at Steelhacks 2018 by Alex Zharichenko, Hayden Stec, and Krutarth Patel | Disclaimer: The content
+            of this site is for informational purposes.
+        </p>
+    </div>
+</nav>
 {% endblock %}
