--- a/debtman/templates/userform.html
+++ b/debtman/templates/userform.html
@@ -7,8 +7,10 @@
         <div class="col-xs-8 col-xs-offset-2">
             <form class="form form-horizontal" method="POST" action="/setup">
                 {{ form.csrf_token }}
-                {% for error in form.name.errors %}
-                <p>{{ error }}</p>
+                {% for field, errors in form.errors.items() %}
+                <div class="alert alert-error">
+                    {{ form[field].label }}: {{ ', '.join(errors) }}
+                </div>
                 {% endfor %}
 
                 <p>{{ form.net_income.label }} {{ form.net_income(size=20) }}</p>
