--- a/debtman/templates/creditform.html
+++ b/debtman/templates/creditform.html
@@ -3,28 +3,31 @@
 
 {% block content %}
 <div class="container">
-  <div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
-      <form class="form form-horizontal" method="POST" action="/setup">
-          {{ form.csrf_token }}
-          {% for error in form.name.errors %}
-            <p>{{ error }}</p>
-          {% endfor %}
+    <div class="row">
+        <div class="col-xs-8 col-xs-offset-2">
+            <form class="form form-horizontal" method="POST" action="/credit">
+                {{ form.csrf_token }}
+                {% for field, errors in form.errors.items() %}
+                <div class="alert alert-error">
+                    {{ form[field].label }}: {{ ', '.join(errors) }}
+                </div>
+                {% endfor %}
 
-          <p>{{ form.name.label }} {{ form.name(size=20) }}</p>
-          <p>{{ form.balance.label }} {{ form.balance(size=20) }}</p>
-          <p>{{ form.interest_rate.label }} {{ form.interest_rate(size=20) }}</p>
-          <p>{{ form.min_payment.label }} {{ form.min_payment(size=20) }}</p>
-          {{ form.compound_type.label }}
-            {% for subfield in form.compound_type %}
-            <tr>
-                <td>{{ subfield }}</td>
-                <td>{{ subfield.label }}</td>
-            </tr>
-            {% endfor %}
-        <input type="submit" value="Go">
-      </form>
+
+                <p>{{ form.name.label }} {{ form.name(size=20) }}</p>
+                <p>{{ form.balance.label }} {{ form.balance(size=20) }}</p>
+                <p>{{ form.interest_rate.label }} {{ form.interest_rate(size=20) }}</p>
+                <p>{{ form.min_payment.label }} {{ form.min_payment(size=20) }}</p>
+                {{ form.compound_type.label }}
+                {% for subfield in form.compound_type %}
+                <tr>
+                    <td>{{ subfield }}</td>
+                    <td>{{ subfield.label }}</td>
+                </tr>
+                {% endfor %}
+                <input type="submit" value="Go">
+            </form>
+        </div>
     </div>
-  </div>
 </div>
 {% endblock %}
