--- a/debtman/templates/debtstart.html
+++ b/debtman/templates/debtstart.html
@@ -3,13 +3,11 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-xs-2 col-xs-offset-4">
+        <div class="col-xs-2 col-xs-offset-5">
             <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_credit_card") }}" role="button">Add Credit Card Account</a></p>
+            <p><a class=" btn btn-primary btn-lg" href="{{ url_for("collect_loan") }}" role="button">Add Loan Account</a></p>
         </div>
-        <div class="col-xs-2>
-            <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_loan") }}" role="button">Add Loan Accounts</a></p>
     </div>
-</div>
 </div>
 {% endblock %}
  
