--- a/debtman/templates/home.html
+++ b/debtman/templates/home.html
@@ -2,34 +2,50 @@
 
 {% block content %}
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12">         
-      <div class="jumbotron">
-        <h1>Mountain of Dues!</h1>
-        <p>An informational calculator to efficiently pay debt</p>
-        <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_basic_data") }}" role="button">Begin Process</a></p>
-      </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="jumbotron">
+                <h1>Mountain of Dues!</h1>
+                <p>An informational calculator to efficiently pay debt</p>
+                <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_basic_data") }}" role="button">Begin
+                    Process</a></p>
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-4">
-       <h2>Step 1: Collect Information</h2>
-       <p>Our program will take basic information about each of your debt commitments.
-         This information will include data such as interest rate, balance, name of the loan, etc. 
-         These will then be plugged into our calculator for recommended payments and actions.</p>
+    <div class="row">
+        <div class="col-xs-4">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h2>Step 1: Collect Information</h2>
+                    <hr>
+                    <p>Our program will take basic information about each of your debt commitments.
+                        This information will include data such as interest rate, balance, name of the loan, etc.
+                        These will then be plugged into our calculator for recommended payments and actions.</p></div>
+            </div>
+        </div>
+        <div class="col-xs-4">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h2>Step 2: Calculate</h2>
+                    <hr>
+                    <p>With the given information we will use our personal algorithms and formulas to calculate
+                        the most efficient way to make payments on your debt.</p></div>
+            </div>
+        </div>
+        <div class="col-xs-4">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h2>Step 3: Personal Recommendation</h2>
+                    <hr>
+                    <p>From the calculations we have done, we will provide you with a personalized payment plan and
+                        recommendations
+                        to follow. Using this will pay back your debt in the most efficient way. Along with this you can
+                        follow tips to
+                        improve your situation. Along with this, you can follow tips to improve your financial state.
+                        **We still recommend
+                        going to financial advisors for more help**</p></div>
+            </div>
+        </div>
     </div>
-    <div class="col-xs-4">
-       <h2>Step 2: Calculate</h2>
-       <p>With the given information we will use our personal algorithms and formulas to calculate
-        the most efficient way to make payments on your debt.</p>
-    </div>
-    <div class="col-xs-4">
-       <h2>Step 3: Personal Recommendation</h2>
-       <p>From the calculations we have done, we will provide you with a personalized payment plan and reccomendations
-      to follow. Using this will pay back your debt in the most efficient way. Along with this you can follow tips to
-      improve your situation. Along with this, you can follow tips to improve your financial state. **We still reccomend
-      going to financial advisors for more help**</p>
-    </div>
-  </div>
 </div>
 {% endblock %}
