--- a/debtman/templates/final.html
+++ b/debtman/templates/final.html
@@ -1,2 +1,12 @@
 <!--Strategy report from given data-->
 {% extends "base.html" %}
+
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+           <h1>{{ result.sum_of_monthly_payments }}}</h1>
+        </div>
+    </div>
+</div>
+{% endblock %}
