--- a/debtman/templates/debt.html
+++ b/debtman/templates/debt.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-2 col-xs-offset-5">
-            <p><a class="btn btn-primary btn-lg" href="{{ url_for("final") }}" role="button">FINISH HIM</a></p>
+            <p><a class="btn btn-primary btn-lg" href="{{ url_for("strategy") }}" role="button">FINISH HIM</a></p>
         </div>
     </div>
 </div>
