--- a/debtman/templates/final.html
+++ b/debtman/templates/final.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-           <h1>{{ result.sum_of_monthly_payments }}}</h1>
+           <h1>{{ result.sum_of_monthly_payments }}</h1>
         </div>
     </div>
 </div>
