--- a/debtman/templates/debt.html
+++ b/debtman/templates/debt.html
@@ -5,6 +5,8 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-2 col-xs-offset-5">
+            <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_credit_card") }}" role="button">Add Credit Card Account</a></p>
+            <p><a class=" btn btn-primary btn-lg" href="{{ url_for("collect_loan") }}" role="button">Add Loan Account</a></p>
             <p><a class="btn btn-primary btn-lg" href="{{ url_for("strategy") }}" role="button">FINISH HIM</a></p>
         </div>
     </div>
