--- a/debtman/templates/final.html
+++ b/debtman/templates/final.html
@@ -4,8 +4,11 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-xs-12">
-           <h1>{{ result.sum_of_monthly_payments }}</h1>
+        <div class="col-xs-8 col-xs-offset-2">
+           <h1>Our Recommendations:</h1>
+            {% for line in result.top_3_lines %}
+            <p>{{ line.name }} : ${{ line.balance }}</p>
+            {% endfor %}
         </div>
     </div>
 </div>
