--- a/debtman/templates/home.html
+++ b/debtman/templates/home.html
@@ -14,9 +14,9 @@
     </div>
     <div class="row">
         <div class="col-xs-4">
-            <div class="panel panel-default">
+            <div class="panel panel-default" style="min-height: 300px">
                 <div class="panel-body">
-                    <h2>Step 1: Collect Information</h2>
+                    <h4>Step 1: Collect Information</h4>
                     <hr>
                     <p>Our program will take basic information about each of your debt commitments.
                         This information will include data such as interest rate, balance, name of the loan, etc.
@@ -24,18 +24,18 @@
             </div>
         </div>
         <div class="col-xs-4">
-            <div class="panel panel-default">
+            <div class="panel panel-default" style="min-height: 300px">
                 <div class="panel-body">
-                    <h2>Step 2: Calculate</h2>
+                    <h4>Step 2: Calculate</h4>
                     <hr>
                     <p>With the given information we will use our personal algorithms and formulas to calculate
                         the most efficient way to make payments on your debt.</p></div>
             </div>
         </div>
         <div class="col-xs-4">
-            <div class="panel panel-default">
+            <div class="panel panel-default" style="min-height: 300px">
                 <div class="panel-body">
-                    <h2>Step 3: Personal Recommendation</h2>
+                    <h4>Step 3: Personal Recommendation</h4>
                     <hr>
                     <p>From the calculations we have done, we will provide you with a personalized payment plan and
                         recommendations
