Added meh advice

--- a/debtman/templates/final.html
+++ b/debtman/templates/final.html
@@ -10,7 +10,11 @@
               <p>{{ line.name }} : ${{ line.balance }}</p>
             {% endfor %}
             <h3>SOME ADVICES</h3>
-            <p></p>
+            <p>1) Talk to lenders about defering loans</p>
+            <p>2) Consolidate debt/loans</p>
+            <p>3) Contact certified financial adviser</p>
+            <p>4) Get a freelance job to earn extra money to pay off loans</p>
+            <p>5) Minimize luxury expenses</p>
         </div>
     </div>
 </div>
