"Ur such a bitch...do you have massive code?"-Alex

--- a/debtman/templates/final.html
+++ b/debtman/templates/final.html
@@ -9,7 +9,7 @@
             {% for line in result.top_3_lines %}
               <p>{{ line.name }} : ${{ line.balance }}</p>
             {% endfor %}
-            <h3>SOME ADVICES</h3>
+            <h3>SOME ADVICE</h3>
             <p>1) Talk to lenders about defering loans</p>
             <p>2) Consolidate debt/loans</p>
             <p>3) Contact certified financial adviser</p>
