--- a/debtman/templates/final.html
+++ b/debtman/templates/final.html
@@ -10,7 +10,7 @@
               <p>{{ line.name }} : ${{ line.balance }}</p>
             {% endfor %}
             <h3>SOME ADVICE</h3>
-            <p>1) Talk to lenders about defering loans</p>
+            <p>1) Talk to lenders about deferring loans</p>
             <p>2) Consolidate debt/loans</p>
             <p>3) Contact certified financial adviser</p>
             <p>4) Get a freelance job to earn extra money to pay off loans</p>
