--- a/debtman/templates/debt.html
+++ b/debtman/templates/debt.html
@@ -6,10 +6,11 @@
     <div class="row">
     </div>
     <div class="row">
-        <div class="col-xs-2 col-xs-offset-5">
+        <div class="col-xs-4 col-xs-offset-1">
             <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_credit_card") }}" role="button">Add Credit Card Account</a></p>
             <p><a class=" btn btn-primary btn-lg" href="{{ url_for("collect_loan") }}" role="button">Add Loan Account</a></p>
             <p><a class="btn btn-primary btn-lg" href="{{ url_for("strategy") }}" role="button">Finish</a></p>
+            <p><a class="btn btn-primary btn-lg" href="{{ url_for("strategy") }}" role="button">Restart</a></p>
         </div>
     </div>
 </div>
