--- a/debtman/templates/debtstart.html
+++ b/debtman/templates/debtstart.html
@@ -3,9 +3,14 @@
 {% block content %}
 <div class="container">
     <div class="row">
+        <h3 style="text-align: center;">Let's start by adding an account</h3>
+    </div>
+    <div class="row">
         <div class="col-xs-2 col-xs-offset-5">
             <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_credit_card") }}" role="button">Add Credit Card Account</a></p>
-            <p><a class=" btn btn-primary btn-lg" href="{{ url_for("collect_loan") }}" role="button">Add Loan Account</a></p>
+        </div>
+        <div class="col-xs-2 col-xs-offset-1">
+             <p><a class=" btn btn-primary btn-lg" href="{{ url_for("collect_loan") }}" role="button">Add Loan Account</a></p>
         </div>
     </div>
 </div>
