--- a/debtman/templates/debt.html
+++ b/debtman/templates/debt.html
@@ -4,17 +4,18 @@
 {% block content %}
 <div class="container">
     <div class="row">
-    </div>
-    <div class="row">
-        <div class="col-xs-8 col-xs-offset-1">
-            <a class="btn btn-primary btn-lg" href="{{ url_for("collect_credit_card") }}" role="button">Add Credit Card Account</a>
-            <a class=" btn btn-primary btn-lg" href="{{ url_for("collect_loan") }}" role="button">Add Loan Account</a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-4 col-xs-offset-1">
-            <a class="btn btn-primary btn-lg" href="{{ url_for("strategy") }}" role="button">Finish</a>
-            <a class="btn btn-primary btn-lg" href="{{ url_for("collect_basic_data") }}" role="button">Restart</a>
+        <div class="panel panel-default">
+            <div class="page-header" >
+                <a class="btn btn-primary btn-lg" href="{{ url_for("collect_credit_card") }}" role="button">Add Credit Card Account</a>
+                <a class=" btn btn-primary btn-lg" href="{{ url_for("collect_loan") }}" role="button">Add Loan Account</a>
+            </div>
+            <div class="panel-body">
+                Table Coming Soon
+            </div>
+            <div class="panel-footer">
+                <a class="btn btn-primary btn-lg" href="{{ url_for("strategy") }}" role="button">Finish</a>
+                <a class="btn btn-primary btn-lg" href="{{ url_for("collect_basic_data") }}" role="button">Restart</a>
+            </div>
         </div>
     </div>
 </div>
