--- a/debtman/templates/debtstart.html
+++ b/debtman/templates/debtstart.html
@@ -3,14 +3,16 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <h3 style="text-align: center;">Let's start by adding an account</h3>
-    </div>
-    <div class="row">
-        <div class="col-xs-2 col-xs-offset-3">
-            <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_credit_card") }}" role="button">Add Credit Card</a></p>
-        </div>
-        <div class="col-xs-2 col-xs-offset-2">
-             <p><a class=" btn btn-primary btn-lg" href="{{ url_for("collect_loan") }}" role="button">Add Loan Account</a></p>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h3 style="text-align: center;">Let's start by adding an account</h3>
+                <div class="col-xs-2 col-xs-offset-3">
+                    <p><a class="btn btn-primary btn-lg" href="{{ url_for("collect_credit_card") }}" role="button">Add Credit Card</a></p>
+                </div>
+                <div class="col-xs-2 col-xs-offset-2">
+                    <p><a class=" btn btn-primary btn-lg" href="{{ url_for("collect_loan") }}" role="button">Add Loan Account</a></p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
