--- a/debtman/templates/final.html
+++ b/debtman/templates/final.html
@@ -24,7 +24,7 @@
                         {% if 'min_payment' in  line %}
                         <th>${{ line.min_payment }}</th>
                         {% else %}
-                        <th>${{ line.monthly.payment }}</th>
+                        <th>${{ line.monthly_payment }}</th>
                         {% endif %}
                     </tr>
                     {% endfor %}
