--- a/debtman/templates/final.html
+++ b/debtman/templates/final.html
@@ -9,6 +9,8 @@
                 <h3>Our Recommendations:</h3>
             </div>
             <div class="panel-body">
+                <p>{{ result.advice }}}</p>
+                <p>{{ result.max_monthly_payments }}</p>
                 <table class="table table-striped">
                     <tr>
                         <th>Account Name</th>
