--- a/debtman/templates/final.html
+++ b/debtman/templates/final.html
@@ -23,7 +23,7 @@
                         <th>{{ line.name }}</th>
                         <th>{{ line.interest_rate * 100 }}%</th>
                         <th>${{ line.balance }}</th>
-                        {% if 'min_payment' in  line %}
+                        {% if 'min_payment' in line %}
                         <th>${{ line.min_payment }}</th>
                         {% else %}
                         <th>${{ line.monthly_payment }}</th>
@@ -31,12 +31,19 @@
                     </tr>
                     {% endfor %}
                 </table>
-                <h3>SOME ADVICE</h3>
-                <p>1) Talk to lenders about deferring loans</p>
-                <p>2) Consolidate debt/loans</p>
-                <p>3) Contact certified financial adviser</p>
-                <p>4) Get a freelance job to earn extra money to pay off loans</p>
-                <p>5) Minimize luxury expenses</p>
+                <hr>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3>SOME ADVICE</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p>1) Talk to lenders about deferring loans</p>
+                        <p>2) Consolidate debt/loans</p>
+                        <p>3) Contact certified financial adviser</p>
+                        <p>4) Get a freelance job to earn extra money to pay off loans</p>
+                        <p>5) Minimize luxury expenses</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
