--- a/debtman/templates/final.html
+++ b/debtman/templates/final.html
@@ -10,7 +10,7 @@
             </div>
             <div class="panel-body">
                 <p>{{ result.advice }}}</p>
-                <p>{{ result.max_monthly_payments }}</p>
+                <p>Max Monthly Payments: <b>{{ result.max_monthly_payments }}</b></p>
                 <table class="table table-striped">
                     <tr>
                         <th>Account Name</th>
@@ -34,7 +34,7 @@
                 <hr>
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3>SOME ADVICE</h3>
+                        <h3>Some Advice</h3>
                     </div>
                     <div class="panel-body">
                         <p>1) Talk to lenders about deferring loans</p>
