--- a/debtman/templates/debt.html
+++ b/debtman/templates/debt.html
@@ -16,7 +16,7 @@
                         <tr>
                             <th>{{ line.name }}</th>
                             <th>{{ "${:,.2f}".format(line.balance) }}</th>
-                            <th>{{ "{:,.2f}%".format(line.interest_rate * 100) }}%</th>
+                            <th>{{ "{:,.2f}%".format(line.interest_rate * 100) }}</th>
                         </tr>
                     {% endfor %}
                 </table>
